<resources>
    <string name="app_name">Nutritio</string>
    <string name="error">Une erreur est survenue</string>

    <!-- Util -->
    <string name="submit">Valider</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="confirm">Confirmation</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="birthdate">Date de naissance</string>


    <!-- Titles -->
    <string name="title_home">Accueil</string>
    <string name="title_planning">Planning</string>
    <string name="title_stocks">Stocks</string>
    <string name="title_recipes">Recettes</string>
    <string name="title_groceries">Courses</string>

    <!-- Titles 2 -->
    <string name="energy">Énergie</string>
    <string name="intake">Apports journaliers</string>
    <string name="vitamins">Vitamines</string>
    <string name="title_activity_stock">StockActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_planning">PlanningActivity</string>
    <string name="pct">%</string>


    <string name="proteinesProgressBarText">PROTEINES</string>
    <string name="glucidesProgressBarText">GLUCIDES     (dont sucres)</string>
    <string name="sucresProgressBarText">dont sucres</string>
    <string name="lipidesProgressBarText">LIPIDES     (dont acides gras saturés)</string>
    <string name="agsProgressBarText">dont acides gras saturés</string>
    <string name="fibresProgressBarText">FIBRES</string>
    <string name="selProgressBarText">SEL</string>

    <string name="reste_consommer">Repas</string>
    <string name="stock">Stock</string>
    <string name="groceries">Courses</string>
    <string name="ingredients">Ingrédients</string>
    <string name="title_activity_ingredient">Ingrédient</string>
    <string name="category">Catégorie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- LoginActivity -->
    <string name="forgot_email">Veuilliez renseigner un email</string>
    <string name="forgot_password">Veuilliez renseigner un mot de passe</string>
    <string name="unknown_user">Utilisateur inconnu</string>
    <string name="create_account">Créer un compte</string>

    <!-- CreateAccountActivity -->
    <string name="must_have_email">"Veillez renseigner un email valide"</string>
    <string name="must_have_firstname">"Veuillez renseigner un prénom"</string>
    <string name="must_have_lastname">"Veuillez renseigner un nom"</string>
    <string name="must_have_password">Veuillez renseigner un mot de passe"</string>
    <string name="bad_password_confirmation">"Veuillez renseigner deux mot de passe identiques"</string>
    <string name="must_have_birthdate">"Veuillez renseigner une date de naissance</string>
    <string name="account_created">"Compte créé"</string>
    <string name="title_activity_add_ingredient_to_groceries">AddIngredientToGroceriesActivity</string>


    <string name="units_prompt">Chose a unit</string>
    <string name="unit">Unité</string>
    <string name="quantity">Quantité</string>
    <string name="cancel">Annuler</string>
    <string name="title_activity_recipe">Recipe</string>
    <string-array name="units">
        <item>Grammes (g)</item>
        <item>Millilitres (ml)</item>
        <item>Unité</item>
        <item>Cuillère à café</item>
        <item>Cuillère à soupe</item>
        <item>Tasse</item>
    </string-array>


</resources>
