<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/planning"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_planning" />

    <item
        android:id="@+id/stocks"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_stocks" />

    <item
        android:id="@+id/recipes"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_recipes" />

    <item
        android:id="@+id/fridge"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_fridge" />

</menu>
