<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:context="com.example.abilambin.nutritio.activity.CreateIngredientEntryActivity">


            <TextView
                android:id="@+id/ingredientTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fragment_margin_bottom"
                android:layout_marginEnd="@dimen/fragment_margin_right"

                android:layout_marginLeft="@dimen/fragment_margin_left"
                android:layout_marginRight="@dimen/fragment_margin_right"
                android:layout_marginStart="@dimen/fragment_margin_left"
                android:layout_marginTop="@dimen/fragment_margin_top"
                android:textSize="@dimen/fragment_title_text_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_marginLeft="@dimen/fragment_line_margin_left"
                android:layout_marginRight="@dimen/fragment_line_margin_right"
                android:layout_height="@dimen/fragment_line_size"
                android:layout_gravity="center_horizontal"
                android:background="#000000" />

            <TextView
                android:id="@+id/ingredientBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="@dimen/fragment_margin_left"
                android:layout_marginRight="@dimen/fragment_margin_right"
                android:layout_marginStart="@dimen/fragment_margin_left"
                android:layout_marginTop="@dimen/fragment_margin_top"
                android:textSize="@dimen/fragment_title2_text_size"/>

            <TextView
                android:id="@+id/ingredientCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="@dimen/fragment_margin_left"
                android:layout_marginRight="@dimen/fragment_margin_right"
                android:layout_marginStart="@dimen/fragment_margin_left"
                android:layout_marginTop="@dimen/fragment_margin_top"
                android:textSize="@dimen/fragment_title2_text_size"/>

            <LinearLayout

                android:layout_marginLeft="@dimen/fragment_line_margin_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/ingredientQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/quantity"
                    android:inputType="numberDecimal" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="70dp"
                    android:entries="@array/units"
                    android:prompt="@string/units_prompt" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fragment_margin_bottom"
                android:layout_marginEnd="@dimen/fragment_margin_right"

                android:layout_marginLeft="@dimen/fragment_margin_left"
                android:layout_marginRight="@dimen/fragment_margin_right"
                android:layout_marginStart="@dimen/fragment_margin_left"
                android:layout_marginTop="@dimen/fragment_margin_top"
                android:textSize="@dimen/fragment_title_text_size"
                android:text="Apports (pour 100g)"/>

            <View
                android:layout_width="fill_parent"
                android:layout_marginLeft="@dimen/fragment_line_margin_left"
                android:layout_marginRight="@dimen/fragment_line_margin_right"
                android:layout_height="@dimen/fragment_line_size"
                android:layout_gravity="center_horizontal"
                android:background="#000000" />

            <TableLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="@dimen/fragment_line_margin_left"
                android:layout_marginRight="@dimen/fragment_line_margin_right"
                android:layout_marginBottom="@dimen/fragment_margin_bottom"
                android:layout_marginTop="@dimen/fragment_margin_top"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    style="@style/rowStyle">
                    <TextView
                        android:text="Energy :"
                        style="@style/rowIntakesNameStyle"
                        />

                    <TextView
                        android:id="@+id/energy"
                        style="@style/rowIntakesValueStyle" />
                </TableRow>

                <TableRow
                    style="@style/rowStyle">
                    <TextView
                        android:text="Protéines :"
                        style="@style/rowIntakesNameStyle"/>
                    <TextView
                        android:id="@+id/proteins"
                        style="@style/rowIntakesValueStyle"/>
                </TableRow>

                <TableRow
                    style="@style/rowStyle">
                    <TextView
                        android:text="Glucides :"
                        style="@style/rowIntakesNameStyle"/>
                    <TextView
                        android:id="@+id/carbs"
                        style="@style/rowIntakesValueStyle"/>
                </TableRow>

                <TableRow
                    style="@style/rowStyle">
                    <TextView
                        android:text="Sucre :"
                        style="@style/rowIntakesNameStyle"/>
                    <TextView
                        android:id="@+id/sugar"
                        style="@style/rowIntakesValueStyle"/>
                    </TableRow>

                <TableRow
                    style="@style/rowStyle">
                    <TextView
                        android:text="Lipides :"
                        style="@style/rowIntakesNameStyle"/>
                    <TextView
                        android:id="@+id/fat"
                        style="@style/rowIntakesValueStyle"/>
                </TableRow>

                <TableRow
                    style="@style/rowStyle">

                    <TextView
                        android:text="Acides gras saturés :"
                        style="@style/rowIntakesNameStyle" />

                    <TextView
                        android:id="@+id/saturatedFat"
                        style="@style/rowIntakesValueStyle" />
                </TableRow>

                <TableRow
                    style="@style/rowStyle">

                    <TextView
                        android:text="Fibres :"
                        style="@style/rowIntakesNameStyle"/>

                    <TextView
                        android:id="@+id/fibres"
                        style="@style/rowIntakesValueStyle" />
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_marginLeft="@dimen/fragment_line_margin_left"
                android:layout_marginRight="@dimen/fragment_line_margin_right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Ajouter"/>

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"/>
            </LinearLayout>




        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>